--- a/style/style.scss
+++ b/style/style.scss
@@ -33,12 +33,7 @@ body {
 	backdrop-filter: blur(32px);
 }
 
-.game {
-	position: relative;
-}
-
-.game-field {
-	border-radius: 8px;
-	background: rgba(1, 22, 39, 0.84);
-	box-shadow: 1px 5px 11px 0px rgba(2, 18, 27, 0.71) inset;
+.text {
+	color: #FFF;
+	font-size: 14px;
 }
